--- a/static/less/metric.less
+++ b/static/less/metric.less
@@ -108,6 +108,10 @@ td.forum-last-post, td.topic-last-post {
   font-size: .8em;
 }
 
+.post-content {
+  max-width: 1033px;
+}
+
 .post-control a {
   border-radius: 3px;
   padding: 5px 20px;
